<resources>
    <string name="app_name">GarajeMotos_MySQL</string>
    <string name="matr_cula">Matrícula</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="a_o">Año:</string>
    <string name="modelo_moto">Modelo moto</string>
    <string name="marca_moto">Marca moto</string>
    <string name="matricula">Matricula</string>
    <string name="anio">Anio</string>
    <string name="volver">VOLVER</string>
    <string name="editar">EDITAR</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="selecciona_un_cliente">Selecciona un cliente</string>
    <string name="id_cliente">Id_Cliente</string>
    <string name="nueva_moto">NUEVA MOTO</string>
    <string name="mostrar_clientes">MOSTRAR CLIENTES</string>
    <string name="todo1">TODO</string>
    <string name="selecciona_una_moto">Selecciona una moto</string>
    <string name="mostrar_motos">MOSTRAR MOTOS</string>
    <string name="nuevo_cliente">NUEVO CLIENTE</string>
    <string name="direcci_n">Dirección</string>
    <string name="crear1">CREAR</string>
    <string name="moto2">moto</string>
    <string name="id_cliente2">Id Cliente</string>
    <string name="moto">Moto</string>
    <string name="direccion">Direccion</string>
    <string name="nombre">Nombre</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="correo1">Correo</string>
    <string name="contrase_a1">Contraseña</string>
    <string name="bienvenido">BIENVENIDO</string>
    <string name="login">LOGIN</string>
    <string name="todo11">TODO</string>
    <string name="nueva_cuenta">Nueva cuenta</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="string_correo" />
    <string name="nueva_cuenta2">NUEVA CUENTA</string>
    <string name="crear">CREAR</string>
    <string name="avatar">Avatar:</string>
    <string name="todo">TODO</string>
    <string name="dni">DNI</string>
</resources>